--- a/custom-ui/build.gradle
+++ b/custom-ui/build.gradle
@@ -32,6 +32,7 @@ dependencies {
   api project(':core')
   implementation "androidx.core:core-ktx:$versions.androidxCore"
   implementation "androidx.recyclerview:recyclerview:$versions.androidxRecyclerView"
+  implementation "androidx.appcompat:appcompat:$versions.appcompat"
 }
 
 ext {
